--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.couchbase.lite:couchbase-lite-android:1.2.0'
+    compile 'com.android.support:support-v4:23.2.1'
 }
