--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,12 @@
         </activity>
         <activity
             android:name=".ui.activities.NewPatientActivity"
-            android:label="@string/title_activity_new_patient"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.PreliminaryDiagnosisActivity"
-            android:label="@string/title_activity_new_patient"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.activities.PatientPageActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
