--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".ui.activities.PatientPageActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-            android:name=".ui.activities.RulesExecutionActivity"
+            android:name=".ui.activities.ComplementaryMethodsInputActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
