--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,11 @@
         </activity>
         <activity
             android:name=".ui.activities.PreliminaryDiagnosisActivity"
+            android:label="@string/preliminary_diagnosis"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ui.activities.PatientPageActivity"
+            android:label="@string/patient"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ui.activities.ComplementaryMethodsInputActivity"
